--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@
 .nav-container span {
     color: #FF5400;
 }
+
 .nav-container img {
     width: 48px;
     height: 56px;
@@ -421,17 +422,116 @@ line-height: 26px;
     background-image: url('Images/Group\ 40089.png');
 }
 /* news letter section */
-.newsletter-container{
-    width: 1170px;
+.newsletter-container {
+    max-width: 1170px;
     display: flex;
-    gap: 53px;
     margin: 100px auto;
-}
-.newsletter-description{
-    display: flex;
-    flex-direction: column;
     gap: 24px;
 }
+
+.newsletter-from {
+    width: 396px;
+    height: 342px;
+    border-radius: 16px;
+    border: 1px solid #FF5400;
+    padding: 40px;
+}
+
+.newsletter-from h1 {
+    color: #131318;
+    font-size: 1.5rem;
+    font-weight: 800;
+    margin-bottom: 16px;
+}
+
+.newsletter-from p {
+    color: #5A5A5D;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 26px;
+    margin-bottom: 24px;
+}
+
+.newsletter-from #name {
+    margin-top: 24px;
+    width: 393px;
+    height: 52px;
+    border-radius: 8px;
+    background: rgba(19, 19, 24, 0.05);
+    border: none;
+}
+
+.newsletter-from #email {
+    margin-top: 24px;
+    width: 393px;
+    height: 52px;
+    border-radius: 8px;
+    background: rgba(19, 19, 24, 0.05);
+    border: none;
+    margin-bottom: 24px;
+}
+
+#name::placeholder {
+    color: rgba(19, 19, 24, 0.30);
+    font-size: 16px;
+    font-weight: 400;
+    padding: 16px 20px;
+
+}
+
+#email::placeholder {
+    color: rgba(19, 19, 24, 0.30);
+    font-size: 16px;
+    font-weight: 400;
+    padding: 16px 20px;
+}
+
+.newsletter-from button {
+    width: 393px;
+    height: 52px;
+    border-radius: 8px;
+    background: #FF5400;
+    border: none;
+    color: #FFF;
+    font-size: 1.25rem;
+}
+
+.newsletter-img {
+    /* border: 2px solid; */
+    width: 672px;
+    position: relative;
+}
+
+.newsletter-img .top {
+    width: 324px;
+    height: 120px;
+    transform: rotate(-19.628deg);
+    flex-shrink: 0;
+    border-radius: 16px;
+    background: #FF5400;
+    position: absolute;
+    top: 60%;
+    left: 51%;
+}
+
+.top p {
+    color: #FFF;
+    text-align: center;
+    font-size: 1.5rem;
+    font-weight: 400;
+    margin-top:20px ;
+}
+
+.top h1 {
+    color: #FFF;
+    font-size: 32px;
+    font-weight: 800;
+    text-align: center;
+}
+
+
+
+
 /* footer section */
 .footer_bg {
     background: rgba(19, 19, 24, 0.05);
@@ -490,6 +590,93 @@ line-height: 26px;
     margin-bottom: 50px;
 }
 
+
+.hide {
+    display: none;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media screen and (min-width:600.1px) and (max-width:2560px) {
+    .BIGhide {
+        display: none;
+    }
+
+    .banner-container {
+        max-width: 1170px;
+        height: 500px;
+        background-image: url('Images/Group\ 13\ \(1\)\ \(1\).png');
+        background-repeat: no-repeat;
+        margin: 0 auto;
+        border-radius: 16px;
+    }
+
+    .banner-shado {
+        border-radius: 16px;
+        background: linear-gradient(180deg, rgba(19, 19, 24, 0.80) 0%, rgba(19, 19, 24, 0.00) 100%);
+        max-width: 1170px;
+        height: 500px;
+    }
+
+    .banner-from {
+        width: 800px;
+        margin: 0 auto;
+        margin-top: 48px;
+    }
+
+    .all-from {
+        /* display: flex   ; */
+        display: flex;
+        padding: 16px;
+        /* align-items: flex-start; */
+        gap: 24px;
+        border-radius: 8px;
+        background: rgba(255, 255, 255, 0.30);
+    }
+
+    .whereGo>input,
+    .banner-select>select {
+        width: 174px;
+        /* height: 52px; */
+        border-radius: 8px;
+        background: #FFF;
+        color: rgba(19, 19, 24, 0.50);
+        font-size: 16px;
+        font-weight: 400;
+        padding: 16px;
+        border: none;
+    }
+
+    .whereGo input::placeholder {
+        color: rgba(19, 19, 24, 0.50);
+        font-size: 16px;
+        font-weight: 400;
+        border: none;
+    }
+
+    
+}
 
 
 
